deployment-v1.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: vertx-greet-v1
spec:
  selector:
    app: "vertx-greet"
  replicas: 1
  template:
    metadata:
      labels:
        app: vertx-greet
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: vertx-greet
          image: quay.io/redhattraining/ossm-vertx-greet:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
