deployment-v3.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: vertx-greet-v3
spec:
  selector:
    app: vertx-greet
  replicas: 1
  template:
    metadata:
      labels:
        app: vertx-greet
        version: v3
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: vertx-greet
          image: quay.io/redhattraining/ossm-vertx-greet:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
